--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "python.analysis.extraPaths": [
-        "c:/Users/kauti/Documents/Canvas_bot_RC_free/."
-    ]
+    "git.ignoreLimitWarning": true
 }
